$Id: History,v 1.37 2001-10-23 07:51:21 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 23, 2001, G.Cosmo (intercoms-V03-02-14)
- Restored inclusion of G4Tokenizer.hh for removal of STLinterface module.
  Files: G4UImanager.cc, G4UIcommand.cc and G4UIparameter.cc.

Oct 12, 2001, M.Asai (intercoms-V03-02-13)
- Rename method in G4UIcommandTree to avoid confliction.
- Temporarly replaced inclusion of G4Tokenizer.hh with old RW wrapper. (G.Cosmo)
- Replaced int/double with G4int/G4double wherever needed. (G.Cosmo)

Oct 11, 2001, G.Cosmo (intercoms-V03-02-12)
- Replaced inclusions of ctoken.h with G4Tokenizer.hh in
  G4UImanager[.hh.cc], G4UIcommand.cc and G4UIparameter.cc.
  Removed comment on RW wrappers.
- Co-works with tag "globals-V03-02-03" where the STLInterface
  module has been removed.

Oct 10, 2001, M.Asai (intercoms-V03-02-11)
- Change aliasing characters from "[" and "]" to "{" and "}".
  This is required to fix the crash in hadronics test code.
- Introducing /control/createHTML

Oct 5, 2001, M.Asai (intercoms-V03-02-10)
- Introducing Loop() and Foreach() methods.
- Introducing three new UI commands
    /control/shell
    /control/foreach
    /control/loop
